--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8">
         <title>Odin Recipes</title>
     </head>
-    
-    <body>
 
+    <body>
+        <h1>Odin Recipes</h1>
     </body>
 </html>
