--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Odin Recipes</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Odin Recipes</title>
+  </head>
 
-    <body>
-        <h1>Odin Recipes</h1>
-    </body>
+  <body>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/easy-chicken-parmesan.html">Easy Chicken Parmesan</a></li>
+    </ul>
+  </body>
 </html>
