--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" translate="no">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,11 +8,25 @@
   <body>
     <h1>Odin Recipes</h1>
     <ul>
-      <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-      <li>
-        <a href="./recipes/easy-chicken-parmesan.html">Easy Chicken Parmesan</a>
-      </li>
-      <li><a href="./recipes/caesar-salad.html">Caesar Salad</a></li>
+      <li><a href="./recipes/lasagna.html" translate="no">Lasagna</a></li>
+      <li><a href="./recipes/easy-chicken-parmesan.html" translate="no">Easy Chicken Parmesan</a></li>
+      <li><a href="./recipes/caesar-salad.html" translate="no">Caesar Salad</a></li>
+      <li><a href="./recipes/pizza.html" translate="no">Pizza</a></li>
+      <li><a href="./recipes/burger.html" translate="no">Burger</a></li>
+      <li><a href="./recipes/tacos.html" translate="no">Tacos</a></li>
+      <li><a href="./recipes/pasta.html" translate="no">Pasta</a></li>
+      <li><a href="./recipes/sushi.html" translate="no">Sushi</a></li>
+      <li><a href="./recipes/ramen.html" translate="no">Ramen</a></li>
+      <li><a href="./recipes/steak.html" translate="no">Steak</a></li>
+      <li><a href="./recipes/fried-rice.html" translate="no">Fried Rice</a></li>
+      <li><a href="./recipes/pancakes.html" translate="no">Pancakes</a></li>
+      <li><a href="./recipes/waffles.html" translate="no">Waffles</a></li>
+      <li><a href="./recipes/french-toast.html" translate="no">French Toast</a></li>
+      <li><a href="./recipes/omelette.html" translate="no">Omelette</a></li>
+      <li><a href="./recipes/panini.html" translate="no">Panini</a></li>
+      <li><a href="./recipes/grilled-cheese.html" translate="no">Grilled Cheese</a></li>
+      <li><a href="./recipes/chicken-wings.html" translate="no">Chicken Wings</a></li>
+      <li><a href="./recipes/hot-dog.html" translate="no">Hot Dog</a></li>
     </ul>
   </body>
 </html>
